--- a/templates/fortune_result.html
+++ b/templates/fortune_result.html
@@ -104,7 +104,7 @@
         plugins: {
           legend: { display: false },
           datalabels: {
-            align: 'end', anchor: 'end',
+            align: 'center', anchor: 'center',
             formatter: v => `${v}점 / 100점`,
             color: '#333', font: { weight: 'bold' }
           }
@@ -136,7 +136,7 @@
         plugins: {
           legend: { display: false },
           datalabels: {
-            align: 'end', anchor: 'end',
+            align: 'center', anchor: 'center',
             formatter: v => `${v}점 / 100점`,
             color: '#333', font: { weight: 'bold' }
           }
